--- a/ch5,6exercises.Rmd
+++ b/ch5,6exercises.Rmd
@@ -105,14 +105,146 @@ summary(iv)
 The p-values show statistical significance for the linear and quadratic terms but not the terms of higher degree polynomials. 
 
 6.2
-```{r}
+a. iii. Lasso relative to least squares is less flexible and will give improved prediction accuracy when its increase in bias is less than its decrease in variance. As lambda increases, flexibility of fit decreases, and the estimated coefficients decrease with some being zero. This leads to a substantial decrease in the variance of the predictions for a small increase in bias.
 
-```
+b. iii. Ridge regression relative to least squares is less flexible and will give improved prediction accuracy when its increase in bias is less than its decrease in variance. As lambda increases, flexibility of fit decreases, and the estimated coefficients decrease with none being zero. This leads to a substantial decrease in the variance of the predictions for a small increase in bias.
+
+c. ii. Non-linear models relative to least squares will be more flexible, and give improved prediction accuracy when its increase in variance is less than its decrease in bias. Predictions will improve if the variance rises less than a decrease in the bias which is the bias-variance trade off.
+  
 
 6.9
 ```{r}
-
+pacman::p_load(ISLR2, glmnet)
+data(College)
+data69 <- College
 ```
+
+a.
+```{r}
+set.seed(42)
+x <- model.matrix(Apps ~ ., College)[,-1]
+y <- College$Apps
+grid <- 10^seq(10, -2, length= 100)
+```
+
+```{r}
+train <- sample(1:nrow(x), nrow(x)/1.3)
+test <- (-train)
+y.test <- y[test]
+```
+
+b. Fit a linear model using least squares on the training set, and report the test error obtained.
+```{r}
+linear.mod <- glmnet(x[train,], y[train], alpha= 0, lambda= grid, thresh= 1e-12)
+linear.pred <- predict(linear.mod, s= 0, newx= x[test,], exact= T, x=x[train,],  y= y[train])
+err.linear <- mean((linear.pred - y.test)^2)
+
+err.linear
+```
+
+```{r}
+train.df <- data.frame(College[train,])
+test.df <- data.frame(College[test,])
+```
+
+```{r}
+lm.fit <- lm(Apps ~ ., data= train.df)
+lm.pred <- predict(lm.fit, test.df, type= c("response"))
+err.lm <- mean((lm.pred - test.df$Apps)^2)
+err.lm
+```
+
+
+c. Fit a ridge regression model on the training set, with λ chosen by cross-validation. Report the test error obtained.
+```{r}
+set.seed(42)
+cv.out <- cv.glmnet(x[train,], y[train], alpha= 0)
+bestlam.ridge <- cv.out$lambda.min
+
+ridge.mod <- glmnet(x, y, alpha= 0, lambda= grid, thresh= 1e-12)
+ridge.pred <- predict(ridge.mod, s=bestlam.ridge, newx= x[test,])
+err.ridge <- mean((ridge.pred - y.test)^2)
+err.ridge
+bestlam.ridge
+```
+
+The best value of lambda for ridge regression, chosen by cv is about 338.67. The test error obtained is 2359439.
+
+d. Fit a lasso model on the training set, with λ chosen by crossvalidation. Report the test error obtained, along with the number of non-zero coefficient estimates.
+```{r}
+set.seed(42)
+lasso.mod <- glmnet(x[train,], y[train], alpha = 1, lambda= grid)
+
+cv.out <- cv.glmnet(x[train,], y[train], alpha = 1)
+bestlam.lasso <- cv.out$lambda.min
+
+lasso.pred <- predict(lasso.mod, s= bestlam.lasso, newx = x[test,])
+err.lasso <- mean((lasso.pred - y.test)^2)
+
+bestlam.lasso
+err.lasso
+```
+The best value of lambda for lasso regression, chosen by cv is about 8.79. The test error obtained is 1793449.
+
+
+e. Fit a PCR model on the training set, with M chosen by crossvalidation. Report the test error obtained, along with the value of M selected by cross-validation.
+```{r}
+pacman::p_load(pls)
+set.seed(42)
+pcr.fit <- pcr(Apps ~ ., data= College, subset= train, scale= T, validation= "CV")
+validationplot(pcr.fit, val.type="MSEP")
+```
+```{r}
+set.seed(42)
+pcr.pred <- predict(pcr.fit, x[test,], ncomp= 5)
+err.pcr <- mean((pcr.pred - y.test)^2)
+err.pcr
+```
+The test set MSE using M=5 is 5023811.
+
+```{r}
+pcr.pred <- predict(pcr.fit, x[test,], ncomp= 16)
+err.pcr <- mean((pcr.pred - y.test)^2)
+err.pcr
+```
+The MSE using M=16 is 1992464.
+
+f. Fit a PLS model on the training set, with M chosen by crossvalidation. Report the test error obtained, along with the value of M selected by cross-validation.
+```{r}
+set.seed(42)
+pls.fit <- plsr(Apps ~ ., data= College, subset= train, scale= T, validation= "CV")
+validationplot(pls.fit, val.type= "MSEP")
+```
+```{r}
+pls.pred <- predict(pls.fit, x[test,], ncomp= 8)
+err.pls <- mean((pls.pred - y.test)^2)
+err.pls
+```
+The MSE is 1752400 when M=8.
+
+g. Comment on the results obtained. How accurately can we predict the number of college applications received? Is there much difference among the test errors resulting from these five approaches?
+```{r}
+err.all <- c(err.lm, err.ridge, err.lasso, err.pcr, err.pls)
+table(err.all, names= c("lm", "ridge", "lasso", "pcr", "pls"))
+barplot(err.all, xlab="Models", ylab="Test MSE", names=c("lm", "ridge", "lasso", "pcr", "pls"))
+```
+All of the models gave similar results, ridge regression has the highest MSE, and lm, lasso, pls are all between 1700000-1800000.
+
+```{r}
+test.avg = mean(y.test)
+lm.r2 = 1 - mean((lm.pred - y.test)^2) / mean((test.avg - y.test)^2)
+ridge.r2 = 1 - mean((ridge.pred - y.test)^2) / mean((test.avg - y.test)^2)
+lasso.r2 = 1 - mean((lasso.pred - y.test)^2) / mean((test.avg - y.test)^2)
+pcr.r2 = 1 - mean((pcr.pred - y.test)^2) / mean((test.avg - y.test)^2)
+pls.r2 = 1 - mean((pls.pred - y.test)^2) / mean((test.avg - y.test)^2)
+```
+
+```{r}
+barplot(c(lm.r2, ridge.r2, lasso.r2, pcr.r2, pls.r2), xlab="Models", ylab="R2",names=c("lm", "ridge", "lasso", "pcr", "pls"))
+table(c(lm.r2, ridge.r2, lasso.r2, pcr.r2, pls.r2), names=c("lm", "ridge", "lasso", "pcr", "pls") )
+```
+All of the R2 values are around 0.88 or above which means we can be confident in the accuracy of the model predictions.
+
 
 6.10
 ```{r}
